--- a/style.css
+++ b/style.css
@@ -2,10 +2,21 @@
     width: 320px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #48a9ab;
     border-radius: 12px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     background-color: rgb(74, 74, 141);
-
-
+}
+.formulario input, .formulario button{
+    width: 95%;
+    padding: 10px;
+    margin: 10px;
+}
+.ver-imagen{
+    width: 120px;
+    height: 120;
+    border-radius: 10%;
+    display: block;
+    margin: 10px auto;
+    border: 2px solid #ccc;
 }
