--- a/style.css
+++ b/style.css
@@ -29,7 +29,17 @@ nav ul{
     padding: 0;
     margin: 0;
     text-align: center;
-}nav ul li{
+}
+nav ul li{
     display: inline;
     margin-right: 20px;
+}
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+}
+nav ul li a:hover{
+    background-color: #555;
 }
