--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 .ver-imagen{
     width: 120px;
-    height: 120;
+    height: 120px;
     border-radius: 10%;
     display: block;
     margin: 10px auto;
